--- a/connectfour.html
+++ b/connectfour.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <h1>Connect Four</h1>
+<h2>Connect 4 chips to Win!</h2>
+<h3>Let's Start</h3>
 <div class="game-board">
   <div class="cell row-top col-0"></div>
   <div class="cell row-top col-1"></div>
@@ -64,7 +66,7 @@
 <div class="footer">
   <button class="reset">Reset</button>
   <span class="status"></span>
-  <h6>copyright Arijit_Mukherjee</h6>
+  <h5>copyright Arijit_Mukherjee</h5>
 </div>
 <script src="connectfour.js"></script>
 </body>
